fix slection broken index

--- a/src/Editor/view/Buffer/buffer.scss
+++ b/src/Editor/view/Buffer/buffer.scss
@@ -22,4 +22,8 @@
   font-family: monospace;
 
   transition: height 1s ease-out;
+
+  & > .line {
+    height: var(--lh);
+  }
 }
